syntax = "proto3";

option go_package = "/api/proto";
package chat;

message ChatMessage {
  string sender = 1;
  string message = 2;
}

service ChatService {
  rpc SendMessage(ChatMessage) returns (ChatMessage) {}
  rpc ReceiveMessage(stream ChatMessage) returns (stream ChatMessage) {}
}
